clean up string generation